# hero365-app

./: .env  .env.deploy  .env.template  .gitignore  AUTH_SWIFT_API_INTEGRATION.md  BUSINESS_CREATION_API_FIX.md  BUSINESS_CREATION_DEBUG.md  BUSINESS_MANAGEMENT_API_SPEC.md  BUSINESS_MANAGEMENT_CLIENT_API.md  DATETIME_STANDARDIZATION_API_CHANGES.md  DEPLOYMENT_GUIDE.md  MOBILE_DEPLOYMENT_IMPLEMENTATION_SUMMARY.md  MULTI_VOICE_AGENT_IMPLEMENTATION_PLAN.md  OAUTH_ONBOARDING_CLEANUP.md  ONBOARDING_API_SPEC.md  OPENAI_AGENTS_SDK_MIGRATION_SUMMARY.md  QUICK_DEPLOY.md  SIMPLIFIED_ONBOARDING_CLIENT_API_GUIDE.md  SIMPLIFIED_ONBOARDING_CLIENT_IMPLEMENTATION.md  SUPABASE_AUTH_ONLY_IMPLEMENTATION_COMPLETE.md  SUPABASE_AUTH_ONLY_MIGRATION.md  SUPABASE_DATABASE_ACCESS_FIX.md  SUPABASE_REFACTORING.md  SUPABASE_SETUP.md  TROUBLESHOOTING_USERS_ME_ENDPOINT.md  USER_AUTO_CREATION_API_CHANGES.md  USER_MANAGEMENT_API_CHANGES.md  aws-cost-analysis.md  aws-deployment-guide.md  aws-deployment.md  aws-scaling-strategy.md  custom-domain-configuration.md  docker-compose.override.yml  docker-compose.yml  iOS_API_Authentication_Fix.md  implementation-plan.mdc  openapi.json  production.env.template  test_content_generation.py  test_database_save.py  (+5 more)
backend/: debug_website_content.json  mock_mobile_deploy.sh  pyproject.toml  test_conversation_management.py  test_json_serialization.py
backend/app/: main.py  models.py  utils.py
backend/app/api/: deps.py  (+2 more)
backend/docs/: DEPLOYMENT-CLEANUP-SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  MOBILE_APP_INTEGRATION_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  SEO_REVENUE_ENGINE_IMPLEMENTATION.md  SEO_SYSTEM_SUCCESS_REPORT.md  cors-configuration.md  installation-pricing-proposal.md  professional-website-generation-summary.md  target-user-pricing-recommendation.md  website-generation-architecture-recommendation.md
(+2668 files in other folders)
