[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.11",
    "alembic>=1.12.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "tenacity>=8.2.0",
    "emails>=0.6.0",
    "gunicorn>=21.2.0",
    "jinja2>=3.1.2",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.24.0",
    "psycopg2-binary>=2.9.7",
    "sentry-sdk[fastapi]>=1.32.0",
    "supabase>=2.16.0",
    "postgrest>=1.0.0",
    "python-dotenv>=1.0.0",
    "resend>=0.6.0",
    "openai>=1.0.0",
    "openai-agents[voice]>=0.1.0",
    "aiohttp>=3.12.14",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
